# gidemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build  build.bat  clean  clean.bat  gidemo.sublime-workspace  release.bat  run  run.bat  wbuild  win.bat  workspace.sublime-workspace  wrun
assets/camera/: camera.mtl
assets/models/: cube.mtl
assets/shaders/: basic.frag  basic.vert  fixopacity.comp  flat.frag  flat.vert  mipmap.comp  particle.frag  particle.vert  shadow.frag  shadow.vert  showvoxels.frag  showvoxels.vert  voxelcone.frag  voxelcone.vert  voxelize.frag  voxelize.geom  voxelize.vert
assets/suntemple/: suntemple.mtl
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: .main.cpp.swp  assets.h  assetstore.cpp  camera.h  fast_obj.h  keys.h  light.h  log.h  main.cpp  mesh.cpp  object.h  particlesystem.h  physics.h  random.h  scene.cpp  scene.h  shader.cpp  texture.cpp  utils.cpp  utils.h  window.cpp  window.h
src/imgui/: entity.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h
